Merge remote-tracking branch 'origin/fix/strip-latex-from-filename' into fix/strip-latex-from-filename