@@ -953,3 +953,7 @@ jmh {
 requirementTracing {
     inputDirectories = files('docs', 'src/main/java', 'src/test/java')
 }
+
+test {
+    jvmArgs += "-Djdk.attach.allowAttachSelf=true"
+}
